# vicinitideals

./: .env.example  .gitignore  .semgrep.yml  CLAUDE.md  DEPLOYMENT_PROMOTION_GATES.md  Dockerfile  README.md  alembic.ini  application.json  docker-compose.yml  pyproject.toml  trivy.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_real_61_scraped_listing_property_broker.py  0003_real_65_gresham_parcel_fields.py  0004_real_71_operating_expense_lines.py  0005_real_15_scenario_version_snapshot.py  0006_real_15_scenario_run_versioning.py  0007_real_21_workflow_run_manifests.py  0008_use_lines_waterfall_ddf.py  0009_refactor_entity_renames.py  0010_refactor_new_projects_table.py  0011_refactor_milestones.py  0012_project_timeline_approved.py  0013_milestone_trigger_chain.py  0014_opex_per_type_scale.py  0015_deal_scenario_refactor.py  0016_use_line_timing_type.py  0017_deal_setup_wizard.py  0018_building_fields_opportunity_buildings.py  0019_listing_promotion.py  0020_unit_mix.py  0021_listing_archived_flag.py  0022_source_total_ingest_jobs.py  0023_realie_enrichment_fields.py  0024_realie_skip_multiparcel.py  0025_project_building_parcel_assignments.py  0026_building_net_rentable_sqft.py  0027_priority_bucket.py  0028_parcel_address_points_fields.py  0029_parcel_rlis_fields.py  0030_zoning_lookup_url.py  0031_enterprise_zone_name.py  0032_cultural_sensitivity.py  0033_parcel_filter_indexes.py  0039_noi_mode.py  (+37 more)
app/: __init__.py  config.py  db.py  sentry_setup.py
data/: formulas.json
docs/: 25_Point_Model_Quality_Checklist.md  Adjust Loan End.md  DATA_MODEL.md  DEPLOYMENT_PROMOTION_GATES.md  FINANCIAL_MODEL.md  MARKET_MODEL.md  PROJECT_OVERVIEW.md  UI_NEEDS.md  Underwriting Plan.md  devops-migration-plan.md  refactor-drop-redundant-debt-fields.md  testing-strategy.md  ui-plan.md
scripts/: analyze_loopnet_experiment.py  backfill_crexi_broker_licenses.py  backfill_loopnet_brokers.py  backfill_loopnet_mf_fields.py  create_security_tickets.py  deploy-vicinitideals.sh  merge_duplicate_brokers.py  normalize_brokers_brokerages.py  phase2_baseline_snapshot.py  phase2_verify_byte_identical.py  post_deploy_smoke.py  test_loopnet_live.py  test_phase_b_debt.py
tests/: conftest.py
vicinitideals/: config.py  db.py  observability.py
wireframes/: 00-splash.html  01-deals.html  03-buildings.html  04-parcels.html  05-listings.html  06-dedup.html  FEEDBACK-ROUND-1.md  _shared.css
(+421 files in other folders)
