[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vicinitideals"
version = "0.1.0"
description = "Real estate financial modeling platform"
requires-python = ">=3.12"
dependencies = [
    # Core async DB
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Config / validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Financial math
    "pyxirr>=0.10",
    # Address normalization
    "usaddress>=0.5.10",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "celery[redis]>=5.3",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyxirr>=0.10",
    "usaddress>=0.5.10",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "itsdangerous>=2.1",
]
worker = [
    "celery[redis]>=5.3",
    "flower>=2.0",
    "curl-cffi>=0.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyxirr>=0.10",
    "usaddress>=0.5.10",
    "httpx>=0.27",
]
tools = [
    "httpx>=0.27",
    "pyshp>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "anyio>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "aiosqlite>=0.20",
    "openpyxl>=3.1",
    "ruff>=0.11",
]
e2e = [
    "pytest-playwright>=0.4",
    "playwright>=1.44",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure logic tests — no DB, no network (fast, <5s total)",
    "integration: tests that use the in-memory DB or the ASGI app",
    "slow: tests that are intentionally slow (scenario sweeps, benchmark fixtures)",
    "e2e: end-to-end browser tests via Playwright (requires live app)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "app/tasks/celery_app.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]
